syntax = "proto3";

option csharp_namespace = "Basket.API.Grpc";

package BasketApi;

service Basket {
    rpc GetBasket(GetBasketRequest) returns (CustomerBasketResponse) {}
    rpc UpdateBasket(UpdateBasketRequest) returns (CustomerBasketResponse) {}
    rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse) {}
}

message GetBasketRequest {
    string cart_id = 1;
}

message CustomerBasketResponse {
    string cart_id = 1;
    repeated BasketItem items = 2;
}

message BasketItem {
  string id = 1;
  string product_id = 2;
  string variant_id = 3;
  int32 quantity = 4;

  string title = 5;
  string slug = 6;
  string thumbnail = 7;

  repeated VariantOption variant_options = 8;
  string price = 9;
  int32 available_stock = 10;
}

message VariantOption {
  string name = 1;
  string value = 2;
}

message UpdateBasketRequest {
    string cart_id = 1;
    repeated BasketItem items = 2;
}

message DeleteBasketRequest {
}

message DeleteBasketResponse {
}